<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".starter.LoginFragment"
    >


    <ImageView
        android:layout_width="171dp"
        android:layout_height="126dp"
        android:src="@drawable/shoes"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/allerta"
        android:text="@string/login_to_shows_app"
        android:textColor="@color/primaryDarkColor"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_you_email_here"
        android:textColor="@color/primaryDarkColor"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="321dp"
        android:layout_height="37dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        android:textColor="@color/primaryDarkColor"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="321dp"
        android:layout_height="37dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="154dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/login"
        android:textSize="24sp"
        android:fontFamily="@font/allerta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="154dp"
        android:layout_height="61dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/register"
        android:textSize="24sp"
        android:fontFamily="@font/allerta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.871" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
