<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.ShoeViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/shoeItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name" />
                <TextView
                    android:id="@+id/shoe_name"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name" />
                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_size" />
                <TextView
                    android:id="@+id/shoe_size"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                   />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>