<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".starter.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primaryTextColor"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/rounded_corners_light"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="335dp"
                android:layout_height="59dp"
                android:layout_margin="24dp"
                android:text="@string/instuctions"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="42sp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:background="@drawable/rounded_corners_light"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/instructions_text"
                android:textAlignment="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.19" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_shop_now_to_start"
            android:textColor="@color/primaryDarkColor"
            android:textSize="24sp"
            android:fontFamily="@font/allerta"
            app:layout_constraintBottom_toTopOf="@+id/shopeNowButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <Button
            android:id="@+id/shopeNowButton"
            android:layout_width="103dp"
            android:layout_height="59dp"
            android:background="@drawable/rounded_corners_light"
            android:text="@string/shop_now"
            android:textColor="@color/primaryDarkColor"
            android:fontFamily="@font/allerta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>